index page complete

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -43,7 +43,7 @@
                         <hr class="divider" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5">Motivated Software Engineer with a solid foundation in systems engineering, full-stack development, and cloud infrastructure (AWS/Azure), experienced in building secure, scalable, and user-focused applications. Passionate about leveraging modern technologies to solve complex problems and deliver high-performance software solutions!</p>
+                        <p class="text-white-75 mb-5">Software Engineer | Full-Stack Development | Cloud Infrastructure  </p>
                         <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
                     </div>
                 </div>
