--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,16 +21,19 @@
     </div>
   </header>
   <div class="d-flex align-items-center justify-content-end vh-100">
+    <div class="homepageImage">
+        <img src="/images/portfolio/fullsize/profile.png" alt="">
+    </div>
   <div class="px-3 welcomeMessage" style="width: 600px; margin-left: auto; margin-right: 10%;">
-    <h1 class="text-end">MENtality MEN-Talk</h1>
+    <h1 class="text-end">Matthew Eady</h1>
     <p class="lead " id="typing-text"> </p>
     <p class="lead text-end">
-      <a href="/blog" class="btn btn-lg btn-light fw-bold border-white bg-white">Vibe Check👈</a>
+      <a href="/home" class="btn btn-lg btn-light fw-bold border-white bg-white">Vibe Check👈</a>
     </p>
   </div>
 </div>
 <script>
-    const textToType = "Welcome MENtality MEN-Talk! Here, strength isn’t just measured by muscle, but by the courage to speak, feel, and heal! Click below for a vibe check!";
+    const textToType = "Motivated Software Engineer with a solid foundation in systems engineering, full-stack development, and cloud infrastructure (AWS/Azure), experienced in building secure, scalable, and user-focused applications. Passionate about leveraging modern technologies to solve complex problems and deliver high-performance software solutions!";
 
   const typingElement = document.getElementById("typing-text");
   let charIndex = 0;
@@ -56,7 +59,7 @@
 </script>
   <footer class="mt-auto text-white-50">
     <p>
-      © <%= new Date().getFullYear();%> MENtality MENtalk, Inc
+      © <%= new Date().getFullYear();%> Coding4Life
     </p>
   </footer>
 </div>
