--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -10,8 +10,9 @@
  * Copyright 2011-2022 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+
 :root {
-  --bs-blue: #0d6efd;
+  --bs-blue: #2f5d80;
   --bs-indigo: #6610f2;
   --bs-purple: #6f42c1;
   --bs-pink: #d63384;
