--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -5,6 +5,21 @@ body {
     background: linear-gradient(to bottom, #212529, #2f5d80);
     
 }
+.homepageImage {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 20%;
+    z-index: -1;
+    
+}
+.homepageImage img {
+    border-bottom-left-radius: 40%;
+    border-bottom-right-radius: 40%;
+}
+
 p, h1 {
     color: white;
 }
