--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     />
     <link rel="stylesheet" href="/styles/styles.css">
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-  <header class="mb-auto">
+  <!-- <header class="mb-auto">
     <div>
      
       <nav class="nav nav-masthead justify-content-center float-md-end">
@@ -19,7 +19,7 @@
         <a class="nav-link fw-bold py-1 px-0" href="/signUp">SIGN UP</a>
       </nav>
     </div>
-  </header>
+  </header> -->
   <div class="d-flex align-items-center justify-content-end vh-100">
     <div class="homepageImage">
         <img src="/images/portfolio/fullsize/profile.png" alt="">
@@ -28,7 +28,7 @@
     <h1 class="text-end">Matthew Eady</h1>
     <p class="lead " id="typing-text"> </p>
     <p class="lead text-end">
-      <a href="/home" class="btn btn-lg btn-light fw-bold border-white bg-white">Vibe Check👈</a>
+      <a href="/home" class="btn btn-lg btn-light fw-bold border-white bg-white vibe">Vibe Check👈</a>
     </p>
   </div>
 </div>
@@ -59,7 +59,7 @@
 </script>
   <footer class="mt-auto text-white-50">
     <p>
-      © <%= new Date().getFullYear();%> Coding4Life
+      © <%= new Date().getFullYear();%> Coding4Life Corp.
     </p>
   </footer>
 </div>
