--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,16 +20,18 @@
       </nav>
     </div>
   </header> -->
-  <div class="d-flex align-items-center justify-content-end vh-100">
-    <div class="homepageImage">
-        <img src="/images/portfolio/fullsize/profile.png" alt="">
+  <div class="container-fluid d-flex align-items-center justify-content-center vh-100 main-div">
+    <div class="row w-100 align-items-center flex-column flex-md-row">
+    <div class="col-md-6 d-flex justify-content-center order-1 order-md-1 homepageImage">
+        <img src="/images/portfolio/fullsize/profile.png" class="img-fluid" alt="Profile Image" />
     </div>
-  <div class="px-3 welcomeMessage" style="width: 600px; margin-left: auto; margin-right: 10%;">
+  <div class="col-md-6 text-start pe-md-5 order-2 order-md-2 welcomeMessage" >
     <h1 class="text-end">Matthew Eady</h1>
     <p class="lead " id="typing-text"> </p>
     <p class="lead text-end">
       <a href="/home" class="btn btn-lg btn-light fw-bold border-white bg-white vibe">Vibe Check👈</a>
     </p>
+  </div>
   </div>
 </div>
 <script>
