--- a/views/home.ejs
+++ b/views/home.ejs
@@ -114,16 +114,16 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="https://www.mentalityblog.com" title="Project Name">
+                        <a class="portfolio-box" href="#portfolio" title="Project Name">
                             <img class="img-fluid" src="/images/portfolio/thumbnails/2.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">EJS/Node JS</div>
-                                <div class="project-name">MENtality Blog</div>
+                                <div class="project-name">Signalwire IVR/Twilio Messaging Client</div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="/images/portfolio/fullsize/3.jpg" title="Project Name">
+                        <a class="portfolio-box" href="#portfolio" title="Project Name">
                             <img class="img-fluid" src="/images/portfolio/thumbnails/3.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">HTML/CSS/JS</div>
@@ -132,7 +132,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="/images/portfolio/fullsize/4.jpg" title="Project Name">
+                        <a class="portfolio-box" href="#portfolio" title="Project Name">
                             <img class="img-fluid" src="/images/portfolio/thumbnails/4.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">HTML/CSS/JS</div>
@@ -141,7 +141,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="/images/portfolio/fullsize/5.jpg" title="Project Name">
+                        <a class="portfolio-box" href="#portfolio" title="Project Name">
                             <img class="img-fluid" src="/images/portfolio/thumbnails/5.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">HTML/CSS/JS</div>
@@ -150,7 +150,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="/images/portfolio/fullsize/6.jpg" title="Project Name">
+                        <a class="portfolio-box" href="#portfolio" title="Project Name">
                             <img class="img-fluid" src="/images/portfolio/thumbnails/6.jpg" alt="..." />
                             <div class="portfolio-box-caption p-3">
                                 <div class="project-category text-white-50">EJS/Node JS</div>
