--- a/views/home.ejs
+++ b/views/home.ejs
@@ -246,6 +246,7 @@
         <!-- Footer-->
         <footer class="bg-light py-5">
             <div class="container px-4 px-lg-5"><div class="small text-center text-muted">© <%= new Date().getFullYear();%> Coding4Life Corp.</div></div>
+            <div class="container px-4 px-lg-5"><div class="small text-center text-muted"><a href="/privacy"><i>Privacy Policy</i></a></div></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
